--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="container">
-        <h1 class="logo">amazon</h1>
+        <h1 class="logo"Account /h1>
 
         <div class="form-box">
             <form>
@@ -29,10 +29,10 @@
                 <label>Re-enter password</label>
                 <input type="password">
 
-                <button type="submit">Create your Amazon account</button>
+                <button type="submit">Create your-----account</button>
 
                 <p class="terms">
-                    By creating an account, you agree to Amazon's 
+                    By creating an account, you agree to ------'s 
                     <a href="#">Conditions of Use</a> and <a href="#">Privacy Notice</a>.
                 </p>
 
@@ -89,4 +89,5 @@
  </div>
 </body>
 </html> -->
+
 
