--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amazon Registration</title>
+    <title>Registration</title>
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
@@ -89,5 +89,6 @@
  </div>
 </body>
 </html> -->
+
 
 
